# confy

./: .clang-format  .gitignore  CMakeLists.txt  cache.pl  cache_factory.pl
docs/: Doxyfile.in  confy.puml  doc.adoc  plex.yml
src/: bad_key.cpp  bad_key.hpp  bad_syntax.cpp  bad_syntax.hpp  cachable.hpp  cache_factory.cpp  cache_factory.hpp  cache_visitor.cpp  cache_visitor_for.cpp  cache_visitor_for.hpp  caches.cpp  caches.hpp  config.cpp  config.hpp  config_set.cpp  config_set.hpp  confy_parser.cpp  confy_parser.hpp  main.cpp  memtrace.cpp  memtrace.h  parser.hpp  type_id.cpp  type_id.hpp  user_modes.cpp  user_modes.hpp  visitor.cpp  visitor.hpp
test/: call_tuple.hpp  capture_stdio.hpp  gtest_lite.h  test.bad_key.cpp  test.bad_syntax.cpp  test.cache.cpp  test.cached.cachefactory.cpp  test.config_set.cpp  test.confy_parser.cpp  test.type_id.cpp  test.uncached.cachefactory.cpp  test.user_modes.cpp  test.visitor.cpp  test_main.cpp
test/inputs/: bare_words.confy  broken1.confy  broken2.confy  broken3.confy  broken4.confy  broken5.confy  broken6.confy  double-strings.confy  empty2.confy  empty3.confy  ints.confy  key_clash.confy  mixed.confy  single-strings.confy  xcolors.confy
utils/: doxml-process.pl
